[package]
name = "fhe-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fhe = {git="https://github.com/Janmajayamall/fhe.rs", branch="wasm"}
fhe-math = {git="https://github.com/Janmajayamall/fhe.rs", branch="wasm"}
num-bigint = "0.4.3"
num-traits = "0.2.15"
wasm-bindgen = "0.2.63"

[lib]
crate-type = ["cdylib"]